--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
     - scikit-learn==0.23.2
     - scipy==1.4.1
     - keras==2.3.0
-    - tensorflow==2.3.0
+    - tensorflow==2.6.0
     - tf-keras-vis==0.8.0
     - tqdm==4.52.0
     - eventlet
@@ -23,4 +23,6 @@ dependencies:
     - python-socketio==4.5.1
     - python-engineio==3.11.2
     - h5py==2.10.0
+  #  - cudatoolkit==10.0
+  #  - cudnn==7.5.2
 prefix: /opt/anaconda3/envs/udacity-self-driving-car
